# setup.py configuration file
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = gwen

[options]
packages = gwen
zip_safe = False
include_package_data = True


# abstract requirements;
# concrete requirements belong in requirements.txt
# https://caremad.io/posts/2013/07/setup-vs-requirement/
install_requires =
    jmespath
    python-dateutil
    pytest
    pytest-mock
    requests-mock
    tox
    xlrd

# [options.extras_require]
# dev =


[flake8]
max-line-length=100

[tool:pytest]
addopts = --color yes --verbose
console_output_style = classic
filterwarnings =
    # only print each warning once per module
    module

    # error on bad assertions
    error:.*assertion is always true.*
